<resources>
    <string name="app_name">SoulMate</string>

    <!--main-->
    <string name="joke1">"等到四十岁，我仍未娶，你也未嫁，我们就在一起。"读罢掩卷沉思，不由感叹：这俩人长得得多丑啊......</string>
    <string name="joke2">失恋也叫痛？你经历过痛么？</string>
    <string name="joke3">某位名人说过,boy的复数，是Gay</string>
    <string name="joke4">你读过的最伤感的诗句是什么？ 答：奇变偶不变，符号看象限</string>
    <string name="joke5">泼出去的水，我连盆都不要</string>

    <!--plan: 添加计划模块-->
    <string name="plan_title">任务标题</string>
    <string name="plan_period">预期完成时间</string>
    <string name="plan_description">备注</string>
    <string name="plan_remind">提醒</string>
    <string name="plan_start">开始计时</string>
    <string name="plan_preEat">主人，我等着你喂呦，啊~~</string>

    <!--time: plan之后的倒计时模块-->
    <string name="time_eating">主人，我好爱你，我开动了^.^ \n祝您接下来过得快乐</string>
    <string name="time_end">距离任务结束还有</string>
    <string name="time_count">00小时:00分</string>
    <string name="hours">hours</string>

</resources>
